Split Ktor api into service subproject